--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,16 @@
 # .gitignore
 
 # logs
+/stacktrace.log
+/test/reports
 /logs
+
+# project release file
+/*.war
+
+# plugin release file
+/*.zip
+/*.plugin.xml
 
 # "temporary" build files
 /target
